test/spec_vectors/local_tee/fail/module_4.wat
(module (func $type-local-arg-void-vs-num (local i32) (local.tee 0 (nop))))